-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11.0.11, 17
-
Component/s: hotspot
-
b30
-
aarch64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8269884 | 18 | Severin Gehwolf | P3 | Resolved | Fixed | b05 |
| JDK-8270708 | 17.0.1 | Severin Gehwolf | P3 | Resolved | Fixed | b03 |
| JDK-8271861 | 11.0.14-oracle | Harold Seigel | P3 | Resolved | Fixed | b01 |
| JDK-8270375 | 11.0.13 | Severin Gehwolf | P3 | Resolved | Fixed | b01 |
| JDK-8372024 | openjdk8u482 | Andrew Hughes | P3 | Resolved | Fixed | b03 |
| JDK-8376266 | shenandoah8u482 | Andrew Hughes | P3 | Resolved | Fixed | b03 |
Actual (on aarch64):
java.library.path = /usr/java/packages/lib
/lib
/usr/lib
Expected (on aarch64):
java.library.path = /usr/java/packages/lib
/usr/lib64
/lib64
/lib
/usr/lib
- backported by
-
JDK-8269884 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
-
JDK-8270375 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
-
JDK-8270708 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
-
JDK-8271861 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
-
JDK-8372024 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
-
JDK-8376266 [aarch64] java.library.path not including /usr/lib64
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/05c76978
-
Commit
openjdk/jdk17/e14801cd
-
Commit(master)
openjdk/jdk8u-dev/a87381a6
-
Review
openjdk/jdk11u-dev/133
-
Review
openjdk/jdk17/200
-
Review
openjdk/jdk/4657
-
Review(master)
openjdk/jdk8u-dev/719