8269668: [aarch64] java.library.path not including /usr/lib64

Reviewed-by: aph, dholmes